<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="sqrtButtonLabel">\u221A</string>
    <string name="divideButtonLabel">\u00F7</string>
    <string name="multiplyButtonLabel">\u00D7</string>
    <string name="signButtonLabel">\u00B1</string>
    <string name="input7Label">7</string>
    <string name="input8Label">8</string>
    <string name="input9Label">9</string>
    <string name="clearButtonLabel">C</string>
    <string name="input4Label">4</string>
    <string name="input5Label">5</string>
    <string name="input6Label">6</string>
    <string name="percentButtonLabel">%</string>
    <string name="input1Label">1</string>
    <string name="input2Label">2</string>
    <string name="input3Label">3</string>
    <string name="subtractButtonLabel">-</string>
    <string name="input0Label">0</string>
    <string name="decimalButtonLabel">.</string>
    <string name="addButtonLabel">+</string>
    <string name="equalsButtonLabel">=</string>
</resources>
