<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Calculator"
    tools:showIn="@layout/activity_calculator">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/outputLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <Button
        android:id="@+id/input7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input7Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input4"
        app:layout_constraintEnd_toStartOf="@+id/input8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel" />

    <Button
        android:id="@+id/input8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input8Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input5"
        app:layout_constraintEnd_toStartOf="@+id/input9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input7"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel" />

    <Button
        android:id="@+id/input9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input9Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input6"
        app:layout_constraintEnd_toStartOf="@+id/sqrtButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input8"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel" />

    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/sqrtButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input9"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/clearButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/percentButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sqrtButton"
        app:layout_constraintTop_toBottomOf="@+id/outputLabel" />

    <Button
        android:id="@+id/input4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input4Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input1"
        app:layout_constraintEnd_toStartOf="@+id/input5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/input7" />

    <Button
        android:id="@+id/input5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input5Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input2"
        app:layout_constraintEnd_toStartOf="@+id/input6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input4"
        app:layout_constraintTop_toBottomOf="@+id/input8" />

    <Button
        android:id="@+id/input6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input6Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input3"
        app:layout_constraintEnd_toStartOf="@+id/divideButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input5"
        app:layout_constraintTop_toBottomOf="@+id/input9" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/divideButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintEnd_toStartOf="@+id/percentButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input6"
        app:layout_constraintTop_toBottomOf="@+id/sqrtButton" />

    <Button
        android:id="@+id/percentButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/percentButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/subtractButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divideButton"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/input1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input1Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/signButton"
        app:layout_constraintEnd_toStartOf="@+id/input2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/input4" />

    <Button
        android:id="@+id/input2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input2Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/input0"
        app:layout_constraintEnd_toStartOf="@+id/input3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input1"
        app:layout_constraintTop_toBottomOf="@+id/input5" />

    <Button
        android:id="@+id/input3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input3Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/decimalButton"
        app:layout_constraintEnd_toStartOf="@+id/multiplyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input2"
        app:layout_constraintTop_toBottomOf="@+id/input6" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/multiplyButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/subtractButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input3"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/subtractButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintTop_toBottomOf="@+id/percentButton" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/signButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/input0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/input1" />

    <Button
        android:id="@+id/input0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/input0Label"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/decimalButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signButton"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/decimalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/decimalButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/input0"
        app:layout_constraintTop_toBottomOf="@+id/input3" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/addButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/equalsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimalButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/equalsButtonLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/subtractButton" />

</android.support.constraint.ConstraintLayout>